--- a/index.html
+++ b/index.html
@@ -392,8 +392,12 @@
                                     </div>
     
                                     <div class="title_wrap">
-                                        <img src="img/cat_1.svg" alt="">
-                                        Європейська кухня
+                                        <div class="df titling">
+                                            <img src="img/cat_1.svg" alt="">
+                                            Європейська кухня
+                                        </div>
+
+                                        <p class="desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium officiis ducimus voluptate, quae blanditiis tenetur fuga recusandae iusto quaerat commodi aliquid suscipit quos totam ratione ea fugit doloremque odio doloribus?</p>
                                     </div>
                                 </div>
 
@@ -403,10 +407,12 @@
                                     </div>
     
                                     <div class="title_wrap">
-                                        <div>
-                                            Олександр Гарус
-                                            <span>Шеф-кухар</span>
+                                        <div class="df titling">
+                                            <img src="img/cat_1.svg" alt="">
+                                            Європейська кухня
                                         </div>
+
+                                        <p class="desc">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium officiis ducimus voluptate, quae blanditiis tenetur fuga recusandae iusto quaerat commodi aliquid suscipit quos totam ratione ea fugit doloremque odio doloribus?</p>
                                     </div>
                                 </div>
                             </div>
