--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
         </a>
     </nav>
 
+    <!-- <div class="cart_wrap"></div> -->
+
     <div class="container">
         <div class="row">
             <div class="s_hide m_hide col_l_3 col_lp_2 col_xl_2 no_padding">
