--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="js/owl.navigation.js"></script>
     <script src="js/scripts.js"></script>
 </head>
-<body>
+<body class="">
     <button class="floating_btn blue call_menu_btn">
         <span>2</span>
     </button>
@@ -88,7 +88,219 @@
         </a>
     </nav>
 
-    <!-- <div class="cart_wrap"></div> -->
+    <div class="cart_wrap">
+        <button class="close_btn">
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 13.4 13.4" style="enable-background:new 0 0 13.4 13.4;" xml:space="preserve">
+            <g>
+                <g>
+                    <path d="M8.3,6.7l4.8-4.8c0.4-0.4,0.4-1.1,0-1.6c-0.4-0.4-1.1-0.4-1.6,0L6.7,5.1L1.9,0.3c-0.4-0.4-1.2-0.4-1.6,0
+                        s-0.4,1.2,0,1.6l4.8,4.8l-4.8,4.8c-0.4,0.4-0.4,1.2,0,1.6c0,0,0,0,0,0c0.4,0.4,1.1,0.4,1.6,0l4.8-4.8l4.8,4.8
+                        c0.4,0.4,1.1,0.4,1.6,0c0.4-0.4,0.4-1.1,0-1.6L8.3,6.7z"/>
+                </g>
+            </g>
+            </svg>
+        </button>
+
+        <div class="titling">Ваш кошик</div>
+
+        <div class="scroll_wrap">
+            <div class="one_cart_item">
+                <a href="" class="img_wrap">
+                    <img src="img/tmp_img.jpg" alt="">
+                </a>
+
+                <div class="product_inner">
+                    <a href="" class="product_name">Пивна закуска для компанії №2</a>
+
+                    <div class="quantity_wrap">
+                        <button class="minus disabled">
+                            <span>-</span>
+                        </button>
+
+                        <p class="quantity">1</p>
+
+                        <button class="plus">
+                            <span>
+                                +
+                            </span>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="price_remove_wrap">
+                    <button class="remove">
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 17.6" style="enable-background:new 0 0 16 17.6;" xml:space="preserve">
+                            <g>
+                                <g>
+                                    <g>
+                                        <path d="M0.8,4L0.8,4h1.6l0,0h12.9l0,0"/>
+                                    </g>
+                                    <g>
+                                        <path d="M4.8,4L4.8,4V2.4c0-0.9,0.7-1.6,1.6-1.6h3.2c0.9,0,1.6,0.7,1.6,1.6V4 M13.6,4v11.3c0,0.9-0.7,1.6-1.6,1.6H4
+                                            c-0.9,0-1.6-0.7-1.6-1.6V4l0,0"/>
+                                    </g>
+                                </g>
+                            </g>
+                            </svg>
+                    </button>
+
+                    <p class="price">
+                        270
+                    </p>
+                </div>
+            </div>
+
+            <div class="one_cart_item">
+                <a href="" class="img_wrap">
+                    <img src="img/tmp_img.jpg" alt="">
+                </a>
+
+                <div class="product_inner">
+                    <a href="" class="product_name">Пивна закуска для компанії №2</a>
+
+                    <div class="quantity_wrap">
+                        <button class="minus disabled">
+                            <span>-</span>
+                        </button>
+
+                        <p class="quantity">1</p>
+
+                        <button class="plus">
+                            <span>
+                                +
+                            </span>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="price_remove_wrap">
+                    <button class="remove">
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 17.6" style="enable-background:new 0 0 16 17.6;" xml:space="preserve">
+                            <g>
+                                <g>
+                                    <g>
+                                        <path d="M0.8,4L0.8,4h1.6l0,0h12.9l0,0"/>
+                                    </g>
+                                    <g>
+                                        <path d="M4.8,4L4.8,4V2.4c0-0.9,0.7-1.6,1.6-1.6h3.2c0.9,0,1.6,0.7,1.6,1.6V4 M13.6,4v11.3c0,0.9-0.7,1.6-1.6,1.6H4
+                                            c-0.9,0-1.6-0.7-1.6-1.6V4l0,0"/>
+                                    </g>
+                                </g>
+                            </g>
+                            </svg>
+                    </button>
+
+                    <p class="price">
+                        270
+                    </p>
+                </div>
+            </div>
+
+            <div class="one_cart_item">
+                <a href="" class="img_wrap">
+                    <img src="img/tmp_img.jpg" alt="">
+                </a>
+
+                <div class="product_inner">
+                    <a href="" class="product_name">Пивна закуска для компанії №2</a>
+
+                    <div class="quantity_wrap">
+                        <button class="minus disabled">
+                            <span>-</span>
+                        </button>
+
+                        <p class="quantity">1</p>
+
+                        <button class="plus">
+                            <span>
+                                +
+                            </span>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="price_remove_wrap">
+                    <button class="remove">
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 17.6" style="enable-background:new 0 0 16 17.6;" xml:space="preserve">
+                            <g>
+                                <g>
+                                    <g>
+                                        <path d="M0.8,4L0.8,4h1.6l0,0h12.9l0,0"/>
+                                    </g>
+                                    <g>
+                                        <path d="M4.8,4L4.8,4V2.4c0-0.9,0.7-1.6,1.6-1.6h3.2c0.9,0,1.6,0.7,1.6,1.6V4 M13.6,4v11.3c0,0.9-0.7,1.6-1.6,1.6H4
+                                            c-0.9,0-1.6-0.7-1.6-1.6V4l0,0"/>
+                                    </g>
+                                </g>
+                            </g>
+                            </svg>
+                    </button>
+
+                    <p class="price">
+                        270
+                    </p>
+                </div>
+            </div>
+
+            <div class="one_cart_item">
+                <a href="" class="img_wrap">
+                    <img src="img/tmp_img.jpg" alt="">
+                </a>
+
+                <div class="product_inner">
+                    <a href="" class="product_name">Пивна закуска для компанії №2</a>
+
+                    <div class="quantity_wrap">
+                        <button class="minus disabled">
+                            <span>-</span>
+                        </button>
+
+                        <p class="quantity">1</p>
+
+                        <button class="plus">
+                            <span>
+                                +
+                            </span>
+                        </button>
+                    </div>
+                </div>
+
+                <div class="price_remove_wrap">
+                    <button class="remove">
+                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 17.6" style="enable-background:new 0 0 16 17.6;" xml:space="preserve">
+                            <g>
+                                <g>
+                                    <g>
+                                        <path d="M0.8,4L0.8,4h1.6l0,0h12.9l0,0"/>
+                                    </g>
+                                    <g>
+                                        <path d="M4.8,4L4.8,4V2.4c0-0.9,0.7-1.6,1.6-1.6h3.2c0.9,0,1.6,0.7,1.6,1.6V4 M13.6,4v11.3c0,0.9-0.7,1.6-1.6,1.6H4
+                                            c-0.9,0-1.6-0.7-1.6-1.6V4l0,0"/>
+                                    </g>
+                                </g>
+                            </g>
+                            </svg>
+                    </button>
+
+                    <p class="price">
+                        270
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="bottom">
+            <p class="total_price">
+                Сума:
+
+                <span>927</span>
+            </p>
+
+            <a href="" class="confirm_cart">
+                <span>Оформити замовлення</span>
+            </a>
+        </div>
+    </div>
 
     <div class="container">
         <div class="row">
@@ -249,7 +461,7 @@
 
                         <section class="top_slider"></section>
 
-                        <section class="mobile_products">
+                        <section class="mobile_products m_hide lp_hide xl_hide">
                             <div class="title_block">Акційні пропозиції</div>
 
                             <div class="owl-carousel products_carousel">
