--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
 <body class="">
     <button class="floating_btn blue call_menu_btn">
         <span>2</span>
+
+        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 13.4 13.4" style="enable-background:new 0 0 13.4 13.4;" xml:space="preserve">
+            <g>
+                <g>
+                    <path d="M8.3,6.7l4.8-4.8c0.4-0.4,0.4-1.1,0-1.6c-0.4-0.4-1.1-0.4-1.6,0L6.7,5.1L1.9,0.3c-0.4-0.4-1.2-0.4-1.6,0
+                        s-0.4,1.2,0,1.6l4.8,4.8l-4.8,4.8c-0.4,0.4-0.4,1.2,0,1.6c0,0,0,0,0,0c0.4,0.4,1.1,0.4,1.6,0l4.8-4.8l4.8,4.8
+                        c0.4,0.4,1.1,0.4,1.6,0c0.4-0.4,0.4-1.1,0-1.6L8.3,6.7z"/>
+                </g>
+            </g>
+            </svg>
     </button>
 
     <button class="floating_btn call_cabinet">
@@ -302,6 +312,23 @@
         </div>
     </div>
 
+    <div class="second_nav">
+        <a href="/" class="main_link l_hide lp_hide xl_hide">
+            <img src="img/logo.svg" class="logo" alt="">
+
+            <img src="img/text_logo.svg" class="text_logo" alt="">
+        </a>
+
+        <a href="" class="df menu_link">головна</a>
+        <a href="" class="df menu_link">Аксії</a>
+        <a href="" class="df menu_link">про нас</a>
+        <a href="" class="df menu_link">для персоналу</a>
+        <a href="" class="df menu_link">доставка</a>
+        <a href="" class="df menu_link">Оплата</a>
+        <a href="" class="df menu_link">Контакти</a>
+        <a href="" class="df menu_link">особистий кабінет <span class="counter">2</span></a>
+    </div>
+
     <div class="container">
         <div class="row">
             <div class="s_hide m_hide col_l_3 col_lp_2 col_xl_2 no_padding">
@@ -461,7 +488,7 @@
 
                         <section class="top_slider"></section>
 
-                        <section class="mobile_products m_hide lp_hide xl_hide">
+                        <section class="mobile_products m_hide l_hide lp_hide xl_hide">
                             <div class="title_block">Акційні пропозиції</div>
 
                             <div class="owl-carousel products_carousel">
@@ -908,7 +935,6 @@
 
                         <section>
                             <div class="df map_wrap">
-
                                 <div class="map_info col_s_12 m_hide l_hide lp_hide xl_hide">
                                     <h2 class="title_h2">Куди доставляємо</h2>
 
