--- a/index.html
+++ b/index.html
@@ -1032,6 +1032,28 @@
                                 </div>
                             </div>
                         </section>  
+
+                        <div class="show_more_wrap">
+                            <button class="show_more_btn">Показати більше</button>
+                        </div>
+
+                        <section>
+                            <div class="pagination_wrap">
+                                <a href="" class="nav"><</a>
+                                <a href="">1</a>
+                                <a href="">2</a>
+                                <a href="">3</a>
+                                <a href="">4</a>
+                                <a href="">5</a>
+                                <a href="">...</a>
+                                <a href="">9</a>
+                                <a href="" class="nav">></a>
+                            </div>
+                        </section>
+
+                        <section>
+                            <div class="short"></div>
+                        </section>
                     </main>
     
                     <footer class="df">
