--- a/index.html
+++ b/index.html
@@ -1022,7 +1022,7 @@
 
                             <div class="short">
                                 <div class="text_shortner">
-                                    <p class="text_block">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est exercitationem dicta consequatur, eos, commodi dolore incidunt laudantium unde aperiam debitis nostrum veritatis cumque esse, culpa voluptate soluta molestiae repellat dolor?
+                                    <p class="text_block shortner">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est exercitationem dicta consequatur, eos, commodi dolore incidunt laudantium unde aperiam debitis nostrum veritatis cumque esse, culpa voluptate soluta molestiae repellat dolor?
                                         Vero facilis minus excepturi perferendis nostrum labore voluptate molestias totam cumque vel, sint doloremque impedit, temporibus et cupiditate. Nihil earum debitis rerum enim optio placeat soluta voluptatum facere repudiandae voluptas!
                                         Doloribus, ratione molestias. Officia, autem beatae consequuntur voluptatem, deserunt enim exercitationem aperiam debitis quasi assumenda dolorum facilis maiores commodi modi omnis illo ipsa illum optio voluptas provident blanditiis fuga libero!
                                         Sunt numquam dicta, adipisci delectus possimus nesciunt dolorem velit consectetur nulla nostrum obcaecati quisquam molestias qui recusandae quis impedit molestiae itaque pariatur esse expedita illo assumenda quo tenetur. Officia, similique.
@@ -1052,7 +1052,156 @@
                         </section>
 
                         <section>
-                            <div class="short"></div>
+                            <div class="category_top_banner" style="background-image: url('/img/category_titler_temp_img.jpg');">
+                                <h1 class="titling">Європейська кухня</h1>
+
+                                <p class="info">
+                                    Що розуміти під позначенням європейська кухня? У Європі багато країн, кожна з яких має свою, самобутню і красиву кулінарну історію та культуру, які відрізняються між собою і мають характерні риси. Але європейська кухня – це спільність європейських традицій кулінарії, узагальнення кухонь всіх європейських країн.
+                                </p>
+                            </div>
+                        </section>
+
+                        <section>
+                            <div class="category_grid">
+                                <a href="" class="category_link">
+                                    <div class="img_wrap"><img src="img/category_link_temp_img.jpg" alt=""></div>
+
+                                    <div class="name_arrow">
+                                        <span>Холодні закуски</span>
+
+                                        <img src="img/arrow_right_white.svg" alt="">
+                                    </div>
+                                </a>
+
+                                <a href="" class="category_link">
+                                    <div class="img_wrap"><img src="img/category_link_temp_img.jpg" alt=""></div>
+
+                                    <div class="name_arrow">
+                                        <span>Холодні закуски</span>
+
+                                        <img src="img/arrow_right_white.svg" alt="">
+                                    </div>
+                                </a>
+
+                                <a href="" class="category_link">
+                                    <div class="img_wrap"><img src="img/category_link_temp_img.jpg" alt=""></div>
+
+                                    <div class="name_arrow">
+                                        <span>Холодні закуски</span>
+
+                                        <img src="img/arrow_right_white.svg" alt="">
+                                    </div>
+                                </a>
+
+                                <a href="" class="category_link">
+                                    <div class="img_wrap"><img src="img/category_link_temp_img.jpg" alt=""></div>
+
+                                    <div class="name_arrow">
+                                        <span>Холодні закуски</span>
+
+                                        <img src="img/arrow_right_white.svg" alt="">
+                                    </div>
+                                </a>
+
+                                <a href="" class="category_link">
+                                    <div class="img_wrap"><img src="img/category_link_temp_img.jpg" alt=""></div>
+
+                                    <div class="name_arrow">
+                                        <span>Холодні закуски</span>
+
+                                        <img src="img/arrow_right_white.svg" alt="">
+                                    </div>
+                                </a>
+                            </div>
+                        </section>
+
+                        <section>
+                            <div class="short">
+                                <h2 class="title_h2">Доставка їжі від De Luxe</h2>
+
+                                <div class="text_shortner">
+                                    <p class="text_block">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est exercitationem dicta consequatur, eos, commodi dolore incidunt laudantium unde aperiam debitis nostrum veritatis cumque esse, culpa voluptate soluta molestiae repellat dolor?
+                                        Vero facilis minus excepturi perferendis nostrum labore voluptate molestias totam cumque vel, sint doloremque impedit, temporibus et cupiditate. Nihil earum debitis rerum enim optio placeat soluta voluptatum facere repudiandae voluptas!
+                                        Doloribus, ratione molestias. Officia, autem beatae consequuntur voluptatem, deserunt enim exercitationem aperiam debitis quasi assumenda dolorum facilis maiores commodi modi omnis illo ipsa illum optio voluptas provident blanditiis fuga libero!
+                                        Sunt numquam dicta, adipisci delectus possimus nesciunt dolorem velit consectetur nulla nostrum obcaecati quisquam molestias qui recusandae quis impedit molestiae itaque pariatur esse expedita illo assumenda quo tenetur. Officia, similique.
+                                        Nisi saepe tempora nemo error sunt obcaecati, harum beatae fugit! Ea doloremque necessitatibus culpa aliquid vitae rem asperiores praesentium neque, veritatis quia ipsa officia vero quod aspernatur qui sed eius!</p>
+
+                                        <h3 class="title_h3">Lorem Ipsum has been the</h3>
+
+                                        <p class="text_block">
+                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, vitae eaque amet, nostrum officia, a quibusdam laudantium neque voluptas tempore consectetur. Reiciendis ratione dicta eum quibusdam! Vero saepe autem minima.
+                                            Ipsum, quo neque magni vero explicabo eum amet recusandae dolore molestias incidunt iusto quisquam deserunt ex consectetur totam fugiat enim animi aperiam, aut ab accusantium inventore eaque. Quis, aspernatur corrupti.
+                                        </p>
+                                </div>
+                            </div>
+                        </section>
+
+                        <section>
+                            <div class="short">
+                                <div class="feed_back_wrap">
+                                    <div class="headings df s_betwen">
+                                        <div>
+                                            <h2 class="title_h2">Відгуки</h2>
+                                            <p class="subtitle">Середня оцінка (14 відгуків)</p>
+                                            <div class="df stars">
+                                                <img src="img/star_filled_icon.svg" alt="">
+                                                <img src="img/star_filled_icon.svg" alt="">
+                                                <img src="img/star_filled_icon.svg" alt="">
+                                                <img src="img/star_filled_icon.svg" alt="">
+                                                <img src="img/star_unfilled_icon.svg" alt="">
+
+                                                <p>3.8</p>
+                                            </div>
+                                        </div>
+
+                                        <button class="">Залишити відгук</button>
+                                    </div>
+
+                                    <div class="one_feedback">
+                                        <div class="inner_heading df s_betwen">
+                                            <div>
+                                                <h3>Ярослав</h3>
+
+                                                <div class="df stars">
+                                                    <img src="img/star_filled_icon.svg" alt="">
+                                                    <img src="img/star_filled_icon.svg" alt="">
+                                                    <img src="img/star_filled_icon.svg" alt="">
+                                                    <img src="img/star_filled_icon.svg" alt="">
+                                                    <img src="img/star_unfilled_icon.svg" alt="">
+                                                </div>
+                                            </div>
+
+                                            <p class="date">12.03.21</p>
+                                        </div>
+
+                                        <p class="feedback">
+                                            Дуже смачний салат, замовили також 3 інших салати, нам всі дуже сподобались, обов'язково замовимо ще раз!? Також нам дуже сподобались ваші рекомендацію що взяти до салату.
+                                        </p>
+                                    </div>
+
+                                    <div class="one_feedback">
+                                        <div class="inner_heading df s_betwen">
+                                            <div>
+                                                <h3>Ярослав</h3>
+
+                                                <div class="df stars">
+                                                    <img src="img/star_filled_icon.svg" alt="">
+                                                    <img src="img/star_filled_icon.svg" alt="">
+                                                    <img src="img/star_filled_icon.svg" alt="">
+                                                    <img src="img/star_filled_icon.svg" alt="">
+                                                    <img src="img/star_unfilled_icon.svg" alt="">
+                                                </div>
+                                            </div>
+
+                                            <p class="date">12.03.21</p>
+                                        </div>
+
+                                        <p class="feedback">
+                                            Дуже смачний салат, замовили також 3 інших салати, нам всі дуже сподобались, обов'язково замовимо ще раз!? Також нам дуже сподобались ваші рекомендацію що взяти до салату.
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
                         </section>
                     </main>
     
