--- a/category.html
+++ b/category.html
@@ -500,7 +500,7 @@
                                         Sunt numquam dicta, adipisci delectus possimus nesciunt dolorem velit consectetur nulla nostrum obcaecati quisquam molestias qui recusandae quis impedit molestiae itaque pariatur esse expedita illo assumenda quo tenetur. Officia, similique.
                                         Nisi saepe tempora nemo error sunt obcaecati, harum beatae fugit! Ea doloremque necessitatibus culpa aliquid vitae rem asperiores praesentium neque, veritatis quia ipsa officia vero quod aspernatur qui sed eius!</p>
 
-                                        <h3 class="title_h3">Lorem Ipsum has been the</h3>
+                                        <h3 class="title_h3 white">Lorem Ipsum has been the</h3>
 
                                         <p class="text_block white">
                                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum, vitae eaque amet, nostrum officia, a quibusdam laudantium neque voluptas tempore consectetur. Reiciendis ratione dicta eum quibusdam! Vero saepe autem minima.
