--- a/policy.html
+++ b/policy.html
@@ -321,13 +321,13 @@
         </a>
 
         <a href="/" class="df menu_link">головна</a>
-        <a href="" class="df menu_link">Аксії</a>
-        <a href="" class="df menu_link">про нас</a>
-        <a href="" class="df menu_link">для персоналу</a>
-        <a href="" class="df menu_link">доставка</a>
-        <a href="" class="df menu_link">Оплата</a>
-        <a href="" class="df menu_link">Контакти</a>
-        <a href="" class="df menu_link">особистий кабінет <span class="counter">2</span></a>
+        <a href="promo.html" class="df menu_link">Аксії</a>
+        <a href="about_us.html" class="df menu_link">про нас</a>
+        <a href="for_stuf.html" class="df menu_link">для персоналу</a>
+        <a href="delivery.html" class="df menu_link">доставка</a>
+        <a href="payment.html" class="df menu_link">Оплата</a>
+        <a href="contacts.html" class="df menu_link">Контакти</a>
+        <a href="cabinte.html" class="df menu_link">особистий кабінет <span class="counter">2</span></a>
     </div>
 
     <div class="container">
@@ -466,21 +466,21 @@
                     </main>
     
                     <footer class="df">
-                            <p class="copyright">
-                                © 2021 Всі права захищенно FADDY
-                            </p>
+                        <p class="copyright">
+                            © 2021 Всі права захищенно FADDY
+                        </p>
 
-                            <div class="df links">
-                                <a href="" class="terms_link">Політика конфіденційності</a>
-                                <a href="" class="terms_link">Використання cookies</a>
-                            </div>
+                        <div class="df links">
+                            <a href="policy.html" class="terms_link">Політика конфіденційності</a>
+                            <a href="policy.html" class="terms_link">Використання cookies</a>
+                        </div>
 
-                            <a href="" target="_blank" class="voronin df">
-                                <img src="img/voronin_logo.svg" alt="">
+                        <a href="https://voroninstudio.eu/" target="_blank" class="voronin df">
+                            <img src="img/voronin_logo.svg" alt="">
 
-                                Розроблено у VORONIN STUDIO. 2021
-                            </a>
-                    </footer>
+                            Розроблено у VORONIN STUDIO. 2021
+                        </a>
+                </footer>
                 </div>
             </div>
         </div>
