--- a/index.html
+++ b/index.html
@@ -320,13 +320,13 @@
         </a>
 
         <a href="/" class="df menu_link">головна</a>
-        <a href="" class="df menu_link">Аксії</a>
-        <a href="" class="df menu_link">про нас</a>
-        <a href="" class="df menu_link">для персоналу</a>
-        <a href="" class="df menu_link">доставка</a>
-        <a href="" class="df menu_link">Оплата</a>
-        <a href="" class="df menu_link">Контакти</a>
-        <a href="" class="df menu_link">особистий кабінет <span class="counter">2</span></a>
+        <a href="promo.html" class="df menu_link">Аксії</a>
+        <a href="about_us.html" class="df menu_link">про нас</a>
+        <a href="for_stuf.html" class="df menu_link">для персоналу</a>
+        <a href="delivery.html" class="df menu_link">доставка</a>
+        <a href="payment.html" class="df menu_link">Оплата</a>
+        <a href="contacts.html" class="df menu_link">Контакти</a>
+        <a href="cabinte.html" class="df menu_link">особистий кабінет <span class="counter">2</span></a>
     </div>
 
     <div class="container">
@@ -428,7 +428,7 @@
                         <section>
                             <div class="owl-carousel main_top_slider">
                                 <div class="one_slide">
-                                    <a href="">
+                                    <a href="one_promo.html">
                                         <div class="img_wrap">
                                             <img src="img/carousel_desctop_temp.jpg" alt="" class="s_hide">
                                             <img src="img/carousel_mob_temp.jpg" alt="" class="m_hide l_hide lp_hide xl_hide">
@@ -437,7 +437,7 @@
                                 </div>
 
                                 <div class="one_slide">
-                                    <a href="">
+                                    <a href="one_promo.html">
                                         <div class="img_wrap">
                                             <img src="img/carousel_desctop_temp.jpg" alt="" class="s_hide">
                                             <img src="img/carousel_mob_temp.jpg" alt="" class="m_hide l_hide lp_hide xl_hide">
@@ -446,7 +446,7 @@
                                 </div>
 
                                 <div class="one_slide">
-                                    <a href="">
+                                    <a href="one_promo.html">
                                         <div class="img_wrap">
                                             <img src="img/carousel_desctop_temp.jpg" alt="" class="s_hide">
                                             <img src="img/carousel_mob_temp.jpg" alt="" class="m_hide l_hide lp_hide xl_hide">
@@ -455,7 +455,7 @@
                                 </div>
 
                                 <div class="one_slide">
-                                    <a href="">
+                                    <a href="one_promo.html">
                                         <div class="img_wrap">
                                             <img src="img/carousel_desctop_temp.jpg" alt="" class="s_hide">
                                             <img src="img/carousel_mob_temp.jpg" alt="" class="m_hide l_hide lp_hide xl_hide">
@@ -464,7 +464,7 @@
                                 </div>
 
                                 <div class="one_slide">
-                                    <a href="">
+                                    <a href="one_promo.html">
                                         <div class="img_wrap">
                                             <img src="img/carousel_desctop_temp.jpg" alt="" class="s_hide">
                                             <img src="img/carousel_mob_temp.jpg" alt="" class="m_hide l_hide lp_hide xl_hide">
@@ -473,7 +473,7 @@
                                 </div>
 
                                 <div class="one_slide">
-                                    <a href="">
+                                    <a href="one_promo.html">
                                         <div class="img_wrap">
                                             <img src="img/carousel_desctop_temp.jpg" alt="" class="s_hide">
                                             <img src="img/carousel_mob_temp.jpg" alt="" class="m_hide l_hide lp_hide xl_hide">
@@ -482,7 +482,7 @@
                                 </div>
 
                                 <div class="one_slide">
-                                    <a href="">
+                                    <a href="one_promo.html">
                                         <div class="img_wrap">
                                             <img src="img/carousel_desctop_temp.jpg" alt="" class="s_hide">
                                             <img src="img/carousel_mob_temp.jpg" alt="" class="m_hide l_hide lp_hide xl_hide">
@@ -975,21 +975,21 @@
                     </main>
     
                     <footer class="df">
-                            <p class="copyright">
-                                © 2021 Всі права захищенно FADDY
-                            </p>
+                        <p class="copyright">
+                            © 2021 Всі права захищенно FADDY
+                        </p>
 
-                            <div class="df links">
-                                <a href="" class="terms_link">Політика конфіденційності</a>
-                                <a href="" class="terms_link">Використання cookies</a>
-                            </div>
+                        <div class="df links">
+                            <a href="policy.html" class="terms_link">Політика конфіденційності</a>
+                            <a href="policy.html" class="terms_link">Використання cookies</a>
+                        </div>
 
-                            <a href="" target="_blank" class="voronin df">
-                                <img src="img/voronin_logo.svg" alt="">
+                        <a href="https://voroninstudio.eu/" target="_blank" class="voronin df">
+                            <img src="img/voronin_logo.svg" alt="">
 
-                                Розроблено у VORONIN STUDIO. 2021
-                            </a>
-                    </footer>
+                            Розроблено у VORONIN STUDIO. 2021
+                        </a>
+                </footer>
                 </div>
             </div>
         </div>
