--- a/cabinte.html
+++ b/cabinte.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/promo.css">
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/imask"></script>
+
     <script src="js/owl.carousel.js"></script>
     <script src="js/owl.navigation.js"></script>
     <script src="js/scripts.js"></script>
@@ -452,7 +455,7 @@
                                         <div class="input_wrap">
                                             <p>Номер телефону:</p>
         
-                                            <input type="tel">
+                                            <input type="tel" class="input_tel">
                                         </div>
 
                                         <div class="input_wrap">
