--- a/about_us.html
+++ b/about_us.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="css/about_us.css">
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/imask"></script>
+    <script src="js/jquery.star-rating-svg.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/star-rating-svg.css">
     <script src="js/owl.carousel.js"></script>
     <script src="js/owl.navigation.js"></script>
     <script src="js/scripts.js"></script>
