--- a/cabinte.html
+++ b/cabinte.html
@@ -10,9 +10,9 @@
     <link rel="stylesheet" href="css/promo.css">
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-
     <script src="https://unpkg.com/imask"></script>
-
+    <script src="js/jquery.star-rating-svg.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/star-rating-svg.css">
     <script src="js/owl.carousel.js"></script>
     <script src="js/owl.navigation.js"></script>
     <script src="js/scripts.js"></script>
@@ -455,7 +455,7 @@
                                         <div class="input_wrap">
                                             <p>Номер телефону:</p>
         
-                                            <input type="tel" class="input_tel">
+                                            <input type="tel" id="input_tel">
                                         </div>
 
                                         <div class="input_wrap">
@@ -467,7 +467,7 @@
                                         <div class="input_wrap">
                                             <p>Дата народження:</p>
         
-                                            <input type="date">
+                                            <input type="text" id="date">
                                         </div>
 
                                         <button class="default_btn">
