--- a/order.html
+++ b/order.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="css/order.css">
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/imask"></script>
+    <script src="js/jquery.star-rating-svg.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/star-rating-svg.css">
     <script src="js/owl.carousel.js"></script>
     <script src="js/owl.navigation.js"></script>
     <script src="js/scripts.js"></script>
@@ -470,7 +473,7 @@
                                     <div class="input_wrap">
                                         <p>Номер телефону:</p>
 
-                                        <input type="text">
+                                        <input type="text" id="input_tel">
                                     </div>
                                 </div>
 
